fix(expectations): merge availableExpectations/predefinedExpectation into a single list (#6801)
Signed-off-by: Marine LM <marine.lemezo@filigran.io>